fix: ui spacing and feel - wip

--- a/css/custom.css
+++ b/css/custom.css
@@ -43,14 +43,19 @@ footer p {
 body {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
+  background-color: var(--light);
 }
 
 @media (min-width: 992px) {
   #intro,
   #coach,
   #program-details {
-    padding-right: 15%;
-    padding-left: 15%;
+    max-width: 992px;
+    margin: auto;
+  }
+
+  .w-lg-50 {
+    width: 50%;
   }
 }
 
